java/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files (x86)\Greenfoot\lib\bluejcore.jar;C:\Program Files (x86)\Greenfoot\lib\bluejeditor.jar;C:\Program Files (x86)\Greenfoot\lib\bluejext.jar;C:\Program Files (x86)\Greenfoot\lib\AppleJavaExtensions.jar;C:\Program Files (x86)\Greenfoot\lib\junit-4.11.jar;C:\Program Files (x86)\Greenfoot\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\Greenfoot\lib\bluej.jar;C:\Program Files (x86)\Greenfoot\lib\diffutils-1.2.1.jar;C:\Program Files (x86)\Greenfoot\lib\commons-httpclient-3.1.jar;C:\Program Files (x86)\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files (x86)\Greenfoot\lib\commons-codec-1.3.jar;C:\Program Files (x86)\Greenfoot\lib\jl1.0.1.jar;C:\Program Files (x86)\Greenfoot\lib\opencsv-2.3.jar;C:\Program Files (x86)\Greenfoot\lib\xom-1.2.9.jar;C:\Program Files (x86)\Greenfoot\lib\guava-17.0.jar;C:\Program Files (x86)\Greenfoot\lib\javassist-3.18.0.jar;C:\Program Files (x86)\Greenfoot\lib\commons-vfs2-2.0.jar;C:\Program Files (x86)\Greenfoot\lib\httpclient-4.1.1.jar;C:\Program Files (x86)\Greenfoot\lib\httpcore-4.1.jar;C:\Program Files (x86)\Greenfoot\lib\httpmime-4.1.1.jar;C:\Users\chicken\Desktop\2학기 과제\java
-d
C:\Users\chicken\Desktop\2학기 과제\java\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\Greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\chicken\Desktop\2학기 과제\java\turtle.java
<---- end of javadoc command ---->
Loading source file C:\Users\chicken\Desktop\2학기 과제\java\turtle.java...
Constructing Javadoc information...
C:\Users\chicken\Desktop\2학기 과제\java\lobster.java:18: error: not a statement
       randomTurn;
       ^
C:\Users\chicken\Desktop\2학기 과제\java\lobster.java:19: error: not a statement
       move;
       ^
C:\Users\chicken\Desktop\2학기 과제\java\lobster.java:20: error: not a statement
       lookForWorm;
       ^
Standard Doclet version 1.8.0_92
Building tree for all the packages and classes...
Generating C:\Users\chicken\Desktop\2학기 과제\java\doc\turtle.html...
Generating C:\Users\chicken\Desktop\2학기 과제\java\doc\package-frame.html...
Generating C:\Users\chicken\Desktop\2학기 과제\java\doc\package-summary.html...
Generating C:\Users\chicken\Desktop\2학기 과제\java\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\chicken\Desktop\2학기 과제\java\doc\allclasses-frame.html...
Generating C:\Users\chicken\Desktop\2학기 과제\java\doc\allclasses-noframe.html...
Generating C:\Users\chicken\Desktop\2학기 과제\java\doc\index.html...
Generating C:\Users\chicken\Desktop\2학기 과제\java\doc\stylesheet.css...
3 warnings
